--- a/launch_ec2.yml
+++ b/launch_ec2.yml
@@ -5,7 +5,7 @@
   - name: launch ec2
     ec2:
       instance_type: t2.micro
-      key_name: firstkey
+      key_name: 
       image: ami-09d95fab7fff3776c
       region: us-east-1
       group: default
